--- a/index.html
+++ b/index.html
@@ -9,29 +9,30 @@
             font-family: Arial, sans-serif;
             margin: 0;
             padding: 0;
-            background: linear-gradient(to bottom, lightblue, gray);
-            color: #333;
+            background-color: #001f3f;
+            color: #fff;
         }
         header {
-            background-color: #333;
+            background-color: #001f3f;
             color: #fff;
-            padding: 10px 0;
+            padding: 20px 0;
             text-align: center;
         }
         nav {
             display: flex;
             justify-content: center;
-            background-color: #444;
+            background-color: #007bff;
         }
         nav a {
             color: white;
             padding: 14px 20px;
             text-decoration: none;
             text-align: center;
+            margin: 0 10px;
         }
         nav a:hover {
-            background-color: #ddd;
-            color: black;
+            background-color: #0056b3;
+            color: white;
         }
         section {
             padding: 20px;
@@ -39,9 +40,34 @@
         .container {
             width: 80%;
             margin: auto;
+            text-align: center;
+        }
+        .cta {
+            background-color: #007bff;
+            padding: 20px;
+            margin: 20px 0;
+            border-radius: 8px;
+        }
+        .cta input[type="text"] {
+            padding: 10px;
+            width: 80%;
+            border: none;
+            border-radius: 4px;
+            margin-bottom: 10px;
+        }
+        .cta button {
+            padding: 10px 20px;
+            background-color: #ff4136;
+            border: none;
+            color: white;
+            border-radius: 4px;
+            cursor: pointer;
+        }
+        .cta button:hover {
+            background-color: #ff6347;
         }
         footer {
-            background-color: #333;
+            background-color: #001f3f;
             color: white;
             text-align: center;
             padding: 10px 0;
@@ -62,6 +88,15 @@
         <a href="#portfolio">Portfolio</a>
         <a href="#contact">Contact</a>
     </nav>
+    <section class="container">
+        <h2>Target the right people, with the right message, at the right time.</h2>
+        <p>PPC | Google, LinkedIn & Programmatic Advertising for SaaS & FinTech Industry</p>
+        <div class="cta">
+            <p>Not sure if you're making the most money you can from your advertising efforts?</p>
+            <input type="text" placeholder="Your Website Address">
+            <button>DISCOVER YOUR SITE'S MONEY-MAKING POTENTIAL FOR FREE</button>
+        </div>
+    </section>
     <section id="about" class="container">
         <h2>About Us</h2>
         <p>Welcome to AWYX Media, a dedicated agency specializing in copywriting and email campaigns. Our mission is to help businesses connect with their audience through persuasive and engaging content. With years of experience in the industry, we understand the nuances of creating messages that resonate and drive action.</p>
@@ -96,3 +131,4 @@
     </footer>
 </body>
 </html>
+
