--- a/index.html
+++ b/index.html
@@ -6,36 +6,37 @@
     <title>AWYX Media</title>
     <style>
         body {
-            font-family: Arial, sans-serif;
+            font-family: 'Arial', sans-serif;
             margin: 0;
             padding: 0;
-            background-color: #001f3f;
+            background-color: #0a0a0a;
             color: #fff;
         }
         header {
-            background-color: #001f3f;
-            color: #fff;
+            background-color: #1a1a1a;
+            color: #00ffcc;
             padding: 20px 0;
             text-align: center;
+            border-bottom: 3px solid #00ffcc;
         }
         nav {
             display: flex;
             justify-content: center;
-            background-color: #007bff;
+            background-color: #141414;
         }
         nav a {
-            color: white;
+            color: #00ffcc;
             padding: 14px 20px;
             text-decoration: none;
             text-align: center;
             margin: 0 10px;
         }
         nav a:hover {
-            background-color: #0056b3;
-            color: white;
+            background-color: #00ffcc;
+            color: #141414;
         }
         section {
-            padding: 20px;
+            padding: 40px 20px;
         }
         .container {
             width: 80%;
@@ -43,10 +44,11 @@
             text-align: center;
         }
         .cta {
-            background-color: #007bff;
+            background-color: #141414;
             padding: 20px;
             margin: 20px 0;
             border-radius: 8px;
+            border: 2px solid #00ffcc;
         }
         .cta input[type="text"] {
             padding: 10px;
@@ -54,38 +56,48 @@
             border: none;
             border-radius: 4px;
             margin-bottom: 10px;
+            background-color: #0a0a0a;
+            color: #fff;
         }
         .cta button {
             padding: 10px 20px;
-            background-color: #ff4136;
+            background-color: #00ffcc;
             border: none;
-            color: white;
+            color: #141414;
             border-radius: 4px;
             cursor: pointer;
         }
         .cta button:hover {
-            background-color: #ff6347;
+            background-color: #009999;
         }
         footer {
-            background-color: #001f3f;
+            background-color: #1a1a1a;
             color: white;
             text-align: center;
             padding: 10px 0;
+            border-top: 3px solid #00ffcc;
             position: fixed;
             width: 100%;
             bottom: 0;
+        }
+        .calendar {
+            background-color: #141414;
+            padding: 20px;
+            margin: 20px 0;
+            border-radius: 8px;
+            border: 2px solid #00ffcc;
+            text-align: center;
         }
     </style>
 </head>
 <body>
     <header>
         <h1>AWYX Media</h1>
-        <p>Your go-to agency for compelling email campaigns and copywriting services</p>
+        <p>Your go-to agency for compelling email campaigns and SEO services</p>
     </header>
     <nav>
         <a href="#about">About Us</a>
         <a href="#services">Services</a>
-        <a href="#portfolio">Portfolio</a>
         <a href="#contact">Contact</a>
     </nav>
     <section class="container">
@@ -99,36 +111,32 @@
     </section>
     <section id="about" class="container">
         <h2>About Us</h2>
-        <p>Welcome to AWYX Media, a dedicated agency specializing in copywriting and email campaigns. Our mission is to help businesses connect with their audience through persuasive and engaging content. With years of experience in the industry, we understand the nuances of creating messages that resonate and drive action.</p>
+        <p>At AWYX Media, we specialize in creating persuasive and engaging content that helps businesses connect with their audience. With years of experience in copywriting and email campaigns, we understand how to craft messages that resonate and drive action. Our goal is to deliver high-quality services that meet your business needs efficiently and effectively.</p>
     </section>
     <section id="services" class="container">
         <h2>Services</h2>
+        <p>We provide:</p>
         <ul>
             <li>Email Campaigns: Crafting targeted email campaigns that drive engagement and conversions.</li>
-            <li>Copywriting: Creating compelling copy for websites, blogs, social media, and more.</li>
-            <li>Content Strategy: Developing comprehensive content strategies that align with your business goals.</li>
-            <li>SEO Writing: Optimizing content to improve search engine visibility and drive organic traffic.</li>
-        </ul>
-    </section>
-    <section id="portfolio" class="container">
-        <h2>Portfolio</h2>
-        <p>Check out some of our recent projects:</p>
-        <ul>
-            <li>Project 1: Email campaign for XYZ Company, resulting in a 30% increase in open rates.</li>
-            <li>Project 2: Website copy for ABC Corp, enhancing user engagement and reducing bounce rates.</li>
-            <li>Project 3: Social media content strategy for DEF Ltd, boosting follower count by 50%.</li>
+            <li>SEO: Optimizing content to improve search engine visibility and drive organic traffic.</li>
         </ul>
     </section>
     <section id="contact" class="container">
         <h2>Contact</h2>
         <p>If you'd like to work with us or have any questions, feel free to reach out:</p>
-        <p>Email: info@awyxmedia.com</p>
-        <p>Phone: +123-456-7890</p>
-        <p>Address: 123 Media Lane, Content City, CA</p>
+        <p>Email: <a href="mailto:ahmad253767@gmail.com" style="color: #00ffcc;">ahmad253767@gmail.com</a></p>
+    </section>
+    <section id="book-meeting" class="container">
+        <h2>Book a Meeting</h2>
+        <p>Schedule a meeting with us through Google Meet. Check our availability and book a slot that works for you:</p>
+        <div class="calendar">
+            <p><a href="https://calendar.google.com/calendar/u/0/r" target="_blank" style="color: #00ffcc;">Check Availability and Book a Meeting</a></p>
+        </div>
     </section>
     <footer>
         <p>&copy; 2024 AWYX Media. All rights reserved.</p>
     </footer>
 </body>
 </html>
+
 
